--- a/src/meson.build
+++ b/src/meson.build
@@ -19,14 +19,14 @@ executable(
     'loongson-daemond',
     gdbus_src,
     sources : ['loongson-daemon.h', 'loongson-daemon.c', 'loongson-server.c', 'dmidecode.c', 'spi.c'],
-    dependencies : [gio_dep, gio_os_dep, gtop_dep],
+    dependencies : [gio_dep, gio_os_dep],
     install : true,
     install_dir : join_paths(get_option('prefix'), get_option('libexecdir'), 'loongson-daemon')
 )
 
 executable('loongson-tools',
   sources : sources + gdbus_src,
-  dependencies : [gtk_deps, gtop_dep],
+  dependencies : [gtk_deps ],
   include_directories: top_srcdir,
   install : true,
   install_dir : get_option('bindir')
